# edge-vox

./: .clang-format  .gitignore  404.html  CMakeLists.txt  Doxyfile  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml  doc.yml  mkdocs.yml
bindings/ros2/: CMakeLists.txt  package.xml
bindings/ros2/include/edgevox_ros/: audio_capture_node.hpp
bindings/ros2/src/: audio_capture_node.cpp
cmake/: edge_vox-config.cmake.in
contributing/license/: index.html
contributing/rules/: index.html
docs/: edge-vox-ros2-class-diagram-uml.md  edge-vox-ros2-class-diagram-uml.mermaid  index.md  overview.md  ros2-messages.md
docs/usage/: ROS_demo.md  demo.md
docs/usage/ros2_build_environment/: usage_with_linux.md
examples/: CMakeLists.txt
examples/simple_chat/: CMakeLists.txt  main.cpp
include/edge_vox/audio/: audio_async.hpp  audio_config.hpp
include/edge_vox/core/: client.hpp
include/edge_vox/net/: stream_config.hpp
overview/: index.html
search/: search_index.json
src/audio/: audio_async.cpp  audio_processor.cpp  audio_processor.hpp
src/core/: client.cpp
src/net/: control_client.cpp  control_client.hpp  packet_buffer.hpp  rtp_packet.hpp  rtp_receiver.cpp  rtp_receiver.hpp  rtp_streamer.cpp  rtp_streamer.hpp
tests/: CMakeLists.txt
tests/audio_reproducer/: CMakeLists.txt  reproducer.cpp
tests/integration/: streaming_test.cpp
tests/unit/: audio_async_test.cpp  control_client_test.cpp  packet_buffer_test.cpp  rtp_packet_test.cpp  rtp_receiver_test.cpp  rtp_streamer_test.cpp
usage/demo/: index.html
